# rag

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
deployments/docker/: docker-compose.yml
src/: components.py  config.py  file_loader.py  llm.py  main.py  rag.py  vector_store.py
