[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [{ name = "ducnd58233", email = "only4wns@gmail.com" }]
readme = "README.md"
requires-python = "^3.11"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
langchain = "^0.3.27"
qdrant-client = "^1.15.0"
tiktoken = "^0.9.0"
unstructured = { extras = ["all-docs"], version = "^0.18.11" }
dotenv = "^0.9.9"
pydantic-settings = "^2.10.1"
langchain-openai = "^0.3.28"
langchain-huggingface = "^0.3.1"
sentence-transformers = "^5.0.0"
streamlit = "^1.47.1"
docling = "^2.43.0"
transformers = "^4.54.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pre-commit-hooks = "^5.0.0"
black = "^25.1.0"
isort = "^6.0.1"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
